fix: navbar links hiding at too high widths, less padding

--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -32,7 +32,7 @@
   height: 100%;
   display: none;
   align-items: center;
-  padding: 0 1rem;
+  padding: 0 0.75rem;
   color: #ffffff;
   text-decoration: none;
   white-space: nowrap;
