--- a/src/containers/Dashboard.scss
+++ b/src/containers/Dashboard.scss
@@ -1,7 +1,5 @@
 @import '../styles/constants';
  
-$mobile-breakpoint: 800px;
-
 .dashboard-page {
   height: 100%;
   display: flex;
